Updated Clover Pop Page and fixed file paths for GitHub Pages

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AnexusFrogWebsite</title>
-  <link rel="stylesheet" href="C:\Users\Administrator\Desktop\Programming Projects\Frog_Website\css\indexfront.css">
+  <link rel="stylesheet" href="css/indexfront.css">
   <!-- Google Font: Fredoka -->
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
         <p>I hope you're having a great time!</p>
 
         <!-- Frog button with JS trigger -->
-        <a href="C:\Users\Administrator\Desktop\Programming Projects\Frog_Website\code\selection.html" class="frog-button" id="frog-link">Jump Inside</a>
+        <a href="code/selection.html" class="frog-button" id="frog-link">Jump Inside</a>
 
         <!-- Decorative circles -->
         <div class="circles">
