--- a/code/selection.html
+++ b/code/selection.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Froggy Polkadots</title>
-  <link rel="stylesheet" href="C:\Users\Administrator\Desktop\Programming Projects\Frog_Website\css\selectionfront.css">
+  <link rel="stylesheet" href="css/selectionfront.css">
 </head>
 <body>
   <div class="polkadots">
@@ -24,10 +24,10 @@
   
     <!-- Three emoji buttons -->
     <div class="emoji-buttons">
-      <a href="C:\Users\Administrator\Desktop\Programming Projects\Frog_Website\code\zgame1.html" class="emoji-btn">🖱️</a>
-      <a href="C:\Users\Administrator\Desktop\Programming Projects\Frog_Website\code\zgame2.html" class="emoji-btn">🎨</a>
-      <a href="C:\Users\Administrator\Desktop\Programming Projects\Frog_Website\code\zgame3.html" class="emoji-btn">☘️</a>
-    </div>
+        <a href="code/zgame1.html" class="emoji-btn">🖱️</a>
+        <a href="code/zgame2.html" class="emoji-btn">🎨</a>
+        <a href="code/zgame3.html" class="emoji-btn">☘️</a>
+    </div>  
   </div>  
 </body>
 </html>
