--- a/code/zgame2.html
+++ b/code/zgame2.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frog Tools Page</title>
-  <link rel="stylesheet" href="C:\Users\Administrator\Desktop\Programming Projects\Frog_Website\css\zgamefront2.css">
+  <link rel="stylesheet" href="css/zgamefront2.css">
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <!-- Back button -->
-  <a href="C:\Users\Administrator\Desktop\Programming Projects\Frog_Website\code\selection.html" class="back-btn">
+  <a href="selection.html" class="back-btn">
     <span class="arrow"></span>
   </a>
 
