Trying to fix selection.html css

--- a/code/selection.html
+++ b/code/selection.html
@@ -22,12 +22,12 @@
     <h1>Welcome to the Lily Pond</h1>
     <p>Enjoy the froggy polkadot vibes 🐸✨</p>
   
-    <!-- Three emoji buttons -->
+    <!-- Emoji buttons -->
     <div class="emoji-buttons">
         <a href="code/zgame1.html" class="emoji-btn">🖱️</a>
         <a href="code/zgame2.html" class="emoji-btn">🎨</a>
         <a href="code/zgame3.html" class="emoji-btn">☘️</a>
-    </div>  
+    </div>
   </div>  
 </body>
 </html>
