Emoji links is not working

--- a/code/selection.html
+++ b/code/selection.html
@@ -24,9 +24,9 @@
   
     <!-- Emoji buttons -->
     <div class="emoji-buttons">
-        <a href="code/zgame1.html" class="emoji-btn">🖱️</a>
-        <a href="code/zgame2.html" class="emoji-btn">🎨</a>
-        <a href="code/zgame3.html" class="emoji-btn">☘️</a>
+        <a href="zgame1.html" class="emoji-btn">🖱️</a>
+        <a href="zgame2.html" class="emoji-btn">🎨</a>
+        <a href="zgame3.html" class="emoji-btn">☘️</a>        
     </div>
   </div>  
 </body>
