--- a/code/selection.html
+++ b/code/selection.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Froggy Polkadots</title>
-  <link rel="stylesheet" href="css/selectionfront.css">
+  <link rel="stylesheet" href="../css/selectionfront.css">
 </head>
 <body>
   <div class="polkadots">
