--- a/code/zgame3.html
+++ b/code/zgame3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Clover Pop Page</title>
-  <link rel="stylesheet" href="css/zgamefront3.css">
+  <link rel="stylesheet" href="../css/zgamefront3.css">
 </head>
 <body>
   <!-- Top-left arrow button -->
