--- a/code/zgame3.html
+++ b/code/zgame3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Top-left arrow button -->
-  <a href="code/selection.html" class="back-btn">
+  <a href="selection.html" class="back-btn">
     <span class="arrow"></span>
   </a>
 
